# helloFastAPI

./: .gitignore
backend/: .dockerignore  .pylintrc  Dockerfile  example.env  pyproject.toml
backend/conf/: log.ini  uvicornLog.yml
backend/requirements/: base.txt  dev.txt  test.txt
backend/src/: appInit.py  exceptions.py  main.py  middleware.py  models.py  settings.py
backend/src/Auth/: __init__.py  config.py  crud.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  typed.py  types.py
backend/src/FileCodeBox/: config.py  dependencies.py  router.py  schemas.py
backend/src/common/: __init__.py  dependencies.py  exceptions.py  models.py  schemas.py
backend/src/middlewares/: __init__.py  dbEngine.py  exceptions.py
backend/src/tools/: __init__.py  common.py  dbs.py  logs.py
backend/tests/Auth/: test.py
